# flipper-rpc

./: CHANGELOG.md  Cargo.toml  DIFF_RM.txt  README.md  file.txt
examples/serial/: file.rs
src/: bin.rs  cli.rs  error.rs  fs.rs  lib.rs  reader_utils.rs  rpc.rs  storage.rs  transport.rs
src/fs/: create_dir.rs  md5.rs  metadata.rs  read.rs  read_dir.rs  remove.rs  tar.rs  write.rs
src/proto/: storage.rs  system.rs
src/rpc/: error.rs  req.rs  res.rs
src/transport/: serial.rs
src/transport/serial/: cli.rs  helpers.rs  rpc.rs
