[package]
name = "flipper-rpc"
version = "0.3.0"
edition = "2024"
description = "Flipper Zero Remote Procedure Call Library (RPC) – A Rust 🦀 library enabling apps to remotely control a Flipper Zero device, similar to qFlipper. Built using the official Flipper Zero protobuf definitions."
repository = "https://github.com/elijah629/flipper-rpc"
documentation = "https://docs.rs/flipper-rpc"
keywords = ["flipperzero", "rpc", "qflipper", "control", "flipper"]
categories = ["encoding", "api-bindings", "development-tools"]
readme = "README.md"
license = "MIT"

[dependencies]

# Serial
serialport = { version = "4.7.2", default-features = false, optional = true }
memchr = { version = "2.7.4", optional = true }

# Transport
md5 = { version = "0.7.0", optional = true }
prost = { version = "0.14.1", git = "https://github.com/tokio-rs/prost", branch = "master", optional = true }

# Errors & Logging
thiserror = "2.0.12"
tracing = { version = "0.1.41", optional = true }

[features]
default = ["minimal"]

# Feature packs
full = ["easy-rpc", "storage", "storage-check-md5", "transport-all"]
minimal = ["proto"]

# Base codec support, most users will want this as, well... this is what the crate provides
proto = ["dep:prost"]

easy-rpc = ["proto"] # Enables the easy to use RPC wrapper to avoid manual construction of proto::Main's
storage = ["easy-rpc", "dep:md5"] # Enables FS wrapper. Depends on "easy" as it uses the easier APIs internally
storage-check-md5 = ["storage"] # Verifies MD5 hashes from the flipper when reading. Will always calculate on write.

# Transport
transport-all = ["transport-serial-opt"] # Enables all transports
transport-any = ["proto"] # Enables support for any transport, all transports require this.

## Serial
transport-serial = ["transport-any", "dep:serialport", "dep:memchr"] # Enables support for serial transport
transport-serial-opt = ["transport-serial", "serial-optimized-varint-reading"]
serial-optimized-varint-reading = [] # Uses a faster protobuf read method which only uses 2 syscalls and all stack memory! One of which is for the varint.

# Adds logging through tokio tracing
tracing = ["dep:tracing"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/bin.rs"
name = "bin"
