[package]
name = "flipper-rpc"
version = "0.9.2"
edition = "2024"
description = "Flipper Zero Remote Procedure Call Library (RPC) – A Rust 🦀 library enabling apps to remotely control a Flipper Zero device, similar to qFlipper. Built using the official Flipper Zero protobuf definitions."
repository = "https://github.com/elijah629/flipper-rpc"
documentation = "https://docs.rs/flipper-rpc"
keywords = ["flipperzero", "rpc", "qflipper", "control", "flipper"]
categories = ["encoding", "api-bindings", "development-tools"]
readme = "README.md"
license = "MIT"
rust-version = "1.86.0"

[dependencies]

# Serial
# TODO: Remove git=... when serialport-rs fixes nix version. This is only here to decreace binary size by deduping a few APIs
serialport = { version = "4.7.3-alpha.0", git = "https://github.com/elijah629/serialport-rs", default-features = false, optional = true }
memchr = { version = "2.7.4", optional = true }

# Transport
prost = { version = "0.14.1", optional = true }
## MD5
md5 = { version = "0.8.0", optional = true }
hex = { version = "0.4.3", optional = true }

# Errors & Logging
thiserror = "2.0.12"
tracing = { version = "0.1.41", optional = true }

[features]
default = ["minimal"]

# Feature packs
full = ["fs-all", "transport-all"] # NOTE: Not recommended, please manually add the features you ACTUALLY need
  minimal = ["proto"]

easy-rpc = ["proto"] # Easy to use RPC wrapper to avoid manual construction of proto::Main's
  proto = ["dep:prost"] # Base codec support

# Filesystem wrappers
# recommended settings and all fs apis
fs-all = ["fs-write", "fs-readdir", "fs-md5", "fs-read", "fs-read-metadata", "fs-metadata", "fs-remove", "fs-createdir", "fs-tar-extract"]
  fs-any = ["easy-rpc"] # Enables the fs wrapper module. By default no filesystem components are enabled. use fs-* for that.
  fs-read = ["fs-any"] # Enables read support
    fs-read-metadata = ["fs-read"] # Makes another RPC call when reading a file to determine the size of it. This saves on some memory allocation but introduces another RPC call.
    fs-read-progress-mpsc = ["fs-read-metadata"] # Requests the size of the file using fs-read-metadata to create a progress channel
  fs-write = ["fs-any", "dep:md5", "dep:hex"] # Enables write support. Requires md5 crate to calculate hashes for the flipper to verify.
    fs-write-progress-mpsc = ["fs-write"] # Simple progress reposting using MPSC channels on fs-write.
  fs-readdir = [] # Enables the fs_read_dir api
  fs-remove = [] # Enables the fs_remove api
  fs-createdir = [] # Enables the fs_create_dir api
  fs-metadata = [] # Enables the fs_metadata api
  fs-progress-mpsc = ["fs-write-progress-mpsc", "fs-read-progress-mpsc"]
  fs-md5 = [] # Unlike what the name says, this function does not calculate any MD5 hashes. It asks the flipper to!
  fs-tar-extract = [] # Extracts tar (NON GZ) files on the flipper

# Transport
transport-all = ["transport-serial-optimized"] # Enables all transports
  transport-any = ["proto"] # Enables support for any transport, all transports require this.
  ## Serial
  transport-serial = ["transport-any", "dep:serialport", "dep:memchr"] # Enables support for serial transport
    transport-serial-optimized = ["transport-serial"] # super fast serial reading decoding
    transport-serial-optimized-large-stack-limit = ["transport-serial-optimized"] # Increases stack limit from 10+128 to 10+512. Useful for large file transfers (warn: large response)

# Adds logging through tokio tracing
tracing = ["dep:tracing"]

[[example]]
name = "serial-av"
path = "examples/serial/av.rs"
required-features = ["transport-serial-optimized", "easy-rpc"]

[[example]]
name = "serial-file"
path = "examples/serial/file.rs"
required-features = ["transport-serial-optimized", "fs-write", "fs-readdir", "fs-remove", "fs-progress-mpsc"]
